--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -253,16 +253,11 @@ jobs:
             done
             psql -c "CREATE USER npgsql_tests_scram SUPERUSER PASSWORD 'npgsql_tests_scram'" postgres
 
-      # TODO: Once test/Npgsql.Specification.Tests work, switch to just testing on the solution
-      - name: Test
-        run: dotnet test -c ${{ matrix.config }} test/Npgsql.Tests --logger "GitHubActions;report-warnings=false"
-        shell: bash
-
       - name: Test Plugins
         if: "!startsWith(matrix.os, 'macos')"
         run: |
             if [ -z "${{ matrix.pg_prerelease }}" ]; then
-                dotnet test -c ${{ matrix.config }} test/Npgsql.PluginTests --logger "GitHubActions;report-warnings=false"
+                # dotnet test -c ${{ matrix.config }} test/Npgsql.PluginTests --logger "GitHubActions;report-warnings=false"
                 dotnet test -c ${{ matrix.config }} test/Npgsql.NodaTime.Tests --logger "GitHubActions;report-warnings=false"
             fi
         shell: bash
